--- a/app/sass/partials/template.scss
+++ b/app/sass/partials/template.scss
@@ -650,7 +650,8 @@ html {
   --------------------------------------------------------------*/
   .btn {
     border-radius: 0;
-    font-family: 'Montserrat', sans-serif;
+    
+    font-family: 'Titillium Web', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 11px;
@@ -814,7 +815,7 @@ html {
   
   /* Forms common style */
   .form-control {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 11px;
@@ -890,7 +891,7 @@ html {
   }
   
   .font-alt {
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Titillium Web', sans-serif !important;
     text-transform: uppercase;
     letter-spacing: 2px;
   }
@@ -915,7 +916,7 @@ html {
     font-weight: 400;
     font-size: 30px;
     color: #111;
-    margin: 0 0 70px;
+    margin: 0px 0px 70px;
   }
   
   .module-subtitle {
@@ -1247,7 +1248,7 @@ html {
     border: 0;
     border-radius: 0;
     z-index: 1000;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 11px;
@@ -1384,25 +1385,29 @@ html {
   
   .titan-title-size-1 {
     letter-spacing: 4px;
-    font-size: 15px;
+    font-size: 1vw;
+    text-shadow: 1px 1px #333;
   }
   
   .titan-title-size-2 {
     line-height: 1.3;
     letter-spacing: 3px;
-    font-size: 18px;
+    font-size: 2vw;
     opacity: .8;
+    text-shadow: 1px 1px #333;
   }
   
   .titan-title-size-3 {
     letter-spacing: 16px;
-    font-size: 46px;
+    font-size: 3vw;
+    text-shadow: 1px 1px #333;
   }
   
   .titan-title-size-4 {
     letter-spacing: 24px;
     font-weight: 900;
-    font-size: 48px;
+    font-size: 4vw;
+    text-shadow: 2px 2px #333;
   }
   
   /* Agency Page Header */
