--- a/app/sass/partials/slick.scss
+++ b/app/sass/partials/slick.scss
@@ -18,7 +18,7 @@
 }
 .gallery-wrap{
     width:80%;
-    margin: 0px auto;
+    margin: 2em auto;
     @media(max-width:767px) {
         width:auto;
     }
