--- a/app/sass/partials/template.scss
+++ b/app/sass/partials/template.scss
@@ -1190,30 +1190,33 @@ html {
   
   .loader {
     position: absolute;
+    /*
     border-left: 2px solid #ffffff;
     border-top: 2px solid rgba(255, 255, 255, 0.2);
     border-right: 2px solid rgba(255, 255, 255, 0.2);
     border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-    height: 46px;
-    width: 46px;
+    */
+    background:url(images/loader.png) center center no-repeat;
+    height: 300px;
+    width: 300px;
     left: 50%;
     top: 50%;
-    margin: -23px 0 0 -23px;
+    margin: -150px 0 0 -150px;
     text-indent: -9999em;
     font-size: 10px;
     z-index: 9999;
-    -webkit-animation: load 0.8s infinite linear;
-    -moz-animation: load 0.8s infinite linear;
-    ms-animation: load 0.8s infinite linear;
-    o-animation: load 0.8s infinite linear;
-    animation: load 0.8s infinite linear;
+    -webkit-animation: load 2s infinite linear;
+    -moz-animation: load 2s infinite linear;
+    ms-animation: load 2s infinite linear;
+    o-animation: load 02s infinite linear;
+    animation: load 2s infinite linear;
   }
   
   .loader,
   .loader:after {
-    border-radius: 50%;
-    width: 46px;
-    height: 46px;
+    //border-radius: 50%;
+    width: 300px;
+    height: 300px;
   }
   
   @-webkit-keyframes load {
@@ -1243,7 +1246,7 @@ html {
   --------------------------------------------------------------*/
   .navbar-custom {
     background: linear-gradient(to bottom, #8c002e 0%,#a90329 51%,#c40327 100%); 
-    opacity:0.9;
+    
 
     border: 0;
     border-radius: 0;
