--- a/style.css
+++ b/style.css
@@ -433,9 +433,14 @@ General Styles - Owlcarousel
 --------------------------------------------------------------*/
 .page-loader { position: fixed; background: #000; bottom: 0; right: 0; left: 0; top: 0; z-index: 9998; }
 
-.loader { position: absolute; border-left: 2px solid #ffffff; border-top: 2px solid rgba(255, 255, 255, 0.2); border-right: 2px solid rgba(255, 255, 255, 0.2); border-bottom: 2px solid rgba(255, 255, 255, 0.2); height: 46px; width: 46px; left: 50%; top: 50%; margin: -23px 0 0 -23px; text-indent: -9999em; font-size: 10px; z-index: 9999; -webkit-animation: load 0.8s infinite linear; -moz-animation: load 0.8s infinite linear; ms-animation: load 0.8s infinite linear; o-animation: load 0.8s infinite linear; animation: load 0.8s infinite linear; }
+.loader { position: absolute; /*
+border-left: 2px solid #ffffff;
+border-top: 2px solid rgba(255, 255, 255, 0.2);
+border-right: 2px solid rgba(255, 255, 255, 0.2);
+border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+*/ background: url(images/loader.png) center center no-repeat; height: 300px; width: 300px; left: 50%; top: 50%; margin: -150px 0 0 -150px; text-indent: -9999em; font-size: 10px; z-index: 9999; -webkit-animation: load 2s infinite linear; -moz-animation: load 2s infinite linear; ms-animation: load 2s infinite linear; o-animation: load 02s infinite linear; animation: load 2s infinite linear; }
 
-.loader, .loader:after { border-radius: 50%; width: 46px; height: 46px; }
+.loader, .loader:after { width: 300px; height: 300px; }
 
 @-webkit-keyframes load { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
   100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
@@ -443,7 +448,7 @@ General Styles - Owlcarousel
   100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 /*-------------------------------------------------------------- Navbar
 --------------------------------------------------------------*/
-.navbar-custom { background: -webkit-gradient(linear, left top, left bottom, from(#8c002e), color-stop(51%, #a90329), to(#c40327)); background: linear-gradient(to bottom, #8c002e 0%, #a90329 51%, #c40327 100%); opacity: 0.9; border: 0; border-radius: 0; z-index: 1000; font-family: 'Titillium Web', sans-serif; text-transform: uppercase; letter-spacing: 3px; font-size: 11px; -webkit-transition: background, padding 0.4s ease-in-out 0s; transition: background, padding 0.4s ease-in-out 0s; }
+.navbar-custom { background: -webkit-gradient(linear, left top, left bottom, from(#8c002e), color-stop(51%, #a90329), to(#c40327)); background: linear-gradient(to bottom, #8c002e 0%, #a90329 51%, #c40327 100%); border: 0; border-radius: 0; z-index: 1000; font-family: 'Titillium Web', sans-serif; text-transform: uppercase; letter-spacing: 3px; font-size: 11px; -webkit-transition: background, padding 0.4s ease-in-out 0s; transition: background, padding 0.4s ease-in-out 0s; }
 
 .navbar a { -webkit-transition: color 0.125s ease-in-out 0s; transition: color 0.125s ease-in-out 0s; }
 
@@ -1069,18 +1074,29 @@ Google map
 .speaker-info strong { font-weight: 900; font-size: 150%; border-bottom: 1px solid #333; }
 .speaker-info .fa { border-radius: 50%; text-align: center; width: 20px; height: 20px; margin-right: 5px; padding: 3px 4px; }
 .speaker-info a.fa:hover { color: #000; }
-.speaker-info p, .speaker-info li { font-size: 120%; }
+.speaker-info p, .speaker-info li { width: 50%; font-size: 120%; }
+
+.speaker-vitals { width: 50%; }
 
 .speaker-long-bio { margin-top: 70px; }
 .speaker-long-bio h2 { margin-top: 70px; }
-.speaker-long-bio .speaker-image { max-width: 100%; max-height: auto; width: 300px; height: 0px; padding-bottom: 90%; }
+.speaker-long-bio .speaker-vitals { width: 300px; display: inline-block; text-align: center; }
+.speaker-long-bio .speaker-image { max-width: 300px; max-height: 300px; margin: 0px auto; width: 300px; height: 300px; }
 
 .speaker-name { color: #fff; }
+
+#speakers .speaker-info { width: 100%; height: 325px; margin-bottom: 10px; }
+#speakers .speaker-image { margin: 0px auto; float: none; display: block; }
+#speakers .speaker-vitals { text-align: center; width: auto; }
+
+.sponsor a { display: block; max-width: 50vw; margin: 0px auto; }
+
+.sponsors { margin-bottom: 140px; }
 
 #gallery { padding: 75px 0px; position: relative; z-index: 100; position: relative; }
 #gallery .skyline { position: absolute; right: 10%; bottom: -20px; width: 20%; max-width: 250px; }
 
-.gallery-wrap { width: 80%; margin: 0px auto; }
+.gallery-wrap { width: 80%; margin: 2em auto; }
 @media (max-width: 767px) { .gallery-wrap { width: auto; } }
 .gallery-wrap .slider { max-width: 1240px; margin: 0px auto; }
 
@@ -1127,23 +1143,21 @@ Google map
 
 .glass { width: 100%; height: 100%; top: 0; right: 0; bottom: 0; left: 0; content: ''; position: absolute; overflow: hidden; }
 
-.goop { background: url(http://conference.siliconharlem.net/wp-content/uploads/2018/10/pink-to-peachgradient.jpg); width: 100%; height: 50px; position: absolute; border-radius: 50%; -webkit-filter: blur(3px); filter: blur(3px); }
-
 .top-goop { top: -25px; }
 
 .bot-goop { bottom: -25px; }
 
 .blob { border-radius: 50%; position: absolute; }
 
-.blob:nth-of-type(1) { height: 80px; width: 80px; -webkit-animation: from-bottom 9s infinite ease-in; animation: from-bottom 9s infinite ease-in; background: -webkit-gradient(linear, left top, left bottom, from(#008ed0), to(#00ac98)); background: linear-gradient(top, #008ed0 0%, #00ac98 100%); background-size: contain; }
+.blob:nth-of-type(1) { height: 80px; width: 80px; -webkit-animation: from-bottom 9s infinite ease-in; animation: from-bottom 9s infinite ease-in; background: -webkit-gradient(linear, left bottom, left top, from(#008ed0), to(#00ac98)); background: linear-gradient(to top, #008ed0 0%, #00ac98 100%); background-size: contain; }
 
 .blob:nth-of-type(2) { width: 80px; height: 80px; left: 20%; -webkit-animation: from-bottom 12s infinite ease-in; animation: from-bottom 12s infinite ease-in; -webkit-animation-delay: 1s; animation-delay: 1s; bottom: -40px; background: #eb008b; background: -webkit-gradient(linear, left top, left bottom, from(#eb008b), to(#fcbf7c)); background: linear-gradient(to bottom, #eb008b 0%, #fcbf7c 100%); background-size: contain; }
 
-.blob:nth-of-type(3) { height: 70px; width: 60px; right: 30px; -webkit-animation: from-top 15s infinite ease-out; animation: from-top 15s infinite ease-out; top: -80px; background: -webkit-gradient(linear, left top, left bottom, from(#008ed0), to(#00ac98)); background: linear-gradient(top, #008ed0 0%, #00ac98 100%); background-size: contain; }
+.blob:nth-of-type(3) { height: 70px; width: 60px; right: 30px; -webkit-animation: from-top 15s infinite ease-out; animation: from-top 15s infinite ease-out; top: -80px; background: -webkit-gradient(linear, left bottom, left top, from(#008ed0), to(#00ac98)); background: linear-gradient(to top, #008ed0 0%, #00ac98 100%); background-size: contain; }
 
-.blob:nth-of-type(4) { height: 40px; width: 40px; left: 50px; -webkit-animation: from-top 12s infinite ease-in; animation: from-top 12s infinite ease-in; top: -80px; -webkit-animation-delay: 3s; animation-delay: 3s; background: -webkit-gradient(linear, left top, left bottom, from(#008ed0), to(#00ac98)); background: linear-gradient(top, #008ed0 0%, #00ac98 100%); background-size: contain; }
+.blob:nth-of-type(4) { height: 40px; width: 40px; left: 50px; -webkit-animation: from-top 12s infinite ease-in; animation: from-top 12s infinite ease-in; top: -80px; -webkit-animation-delay: 3s; animation-delay: 3s; background: -webkit-gradient(linear, left bottom, left top, from(#008ed0), to(#00ac98)); background: linear-gradient(to top, #008ed0 0%, #00ac98 100%); background-size: contain; }
 
-.blob:nth-of-type(5) { height: 6vw; width: 6vw; left: 50vw; -webkit-animation: from-bottom 15s infinite ease-in; animation: from-bottom 15s infinite ease-in; bottom: -80px; -webkit-animation-delay: 3s; animation-delay: 3s; background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#5cbb6a)); background: linear-gradient(top, #00adee 0%, #5cbb6a 100%); }
+.blob:nth-of-type(5) { height: 6vw; width: 6vw; left: 50vw; -webkit-animation: from-bottom 15s infinite ease-in; animation: from-bottom 15s infinite ease-in; bottom: -80px; -webkit-animation-delay: 3s; animation-delay: 3s; background: -webkit-gradient(linear, left bottom, left top, from(#00adee), to(#5cbb6a)); background: linear-gradient(to top, #00adee 0%, #5cbb6a 100%); }
 
 .blob:nth-of-type(5) { height: 6vw; width: 6vw; left: 50vw; -webkit-animation: from-bottom 15s infinite ease-in; animation: from-bottom 15s infinite ease-in; bottom: -80px; -webkit-animation-delay: 3s; animation-delay: 3s; background: #fff352; }
 
@@ -1174,15 +1188,25 @@ Google map
   100% { bottom: -10vh; right: 50vw; } }
 @keyframes from-leftright { 0% { top: -8vh; left: 90vw; }
   100% { bottom: -10vh; right: 50vw; } }
-canvas { display: block; vertical-align: bottom; background: rgba(0, 0, 0, 0.3); }
+canvas { display: block; vertical-align: bottom; background: rgba(0, 0, 0, 0.1); }
 
 /* ---- particles.js container ---- */
 #particles-js { width: 100vw; height: 100vh; position: absolute; z-index: 10; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat; }
 
-.caption-content a.btn { font-size: 1vw; text-shadow: 1px 1px #333; }
+h2.module-title { font-weight: 900; font-size: 400%; color: #0090D1; }
+
+h3.section-head { font-weight: bold; color: #a057a2; text-align: center; font-size: 150%; }
+
+h4.section-prime { font-weight: bold; border-bottom: 3px dashed #f58669; padding-bottom: 1em; margin-bottom: 1em; text-align: center; font-size: 120%; color: #419B4E; }
+
+.caption-content a.btn { font-size: 1vw; text-shadow: 1px 1px #000; }
 @media (max-width: 767px) { .caption-content a.btn { max-width: 90%; word-wrap: break-word; } }
 
-.panel-group { margin-bottom: 0px; }
+.panel-group { margin-bottom: 0px; border-color: none; }
+
+.panel-title { font-size: 1em; }
+
+.panel-default { border-color: none; border-radius: 25px !important; }
 
 .session-time, .mobile-sesion.time { float: right; margin-right: 2em; margin-top: -17px; text-transform: none; color: #fff !important; }
 @media (max-width: 767px) { .session-time, .mobile-sesion.time { display: none; } }
@@ -1190,17 +1214,31 @@ canvas { display: block; vertical-align: bottom; background: rgba(0, 0, 0, 0.3);
 .mobile-session-time { display: block; text-align: center; margin: 0px auto; font-weight: 900; }
 @media (min-width: 768px) { .mobile-session-time { display: none; } }
 
-.panel-default > .panel-heading { color: #ccc; background: -webkit-gradient(linear, left bottom, left top, from(#8c002e), color-stop(51%, #a90329), to(#c40327)); background: linear-gradient(to top, #8c002e 0%, #a90329 51%, #c40327 100%); border-color: #8c002e; }
+.module { padding-top: 70px; }
+
+.panel-default > .panel-heading { color: #ccc; padding: 2em; font-size: 150%; background: -webkit-gradient(linear, left bottom, left top, from(#8c002e), color-stop(51%, #a90329), to(#c40327)); background: linear-gradient(to top, #8c002e 0%, #a90329 51%, #c40327 100%); border-color: #8c002e; }
 .panel-default > .panel-heading h4 a, .panel-default > .panel-heading h4 a.collapsed { color: #fff !important; }
 .panel-default > .panel-heading .speaker-name { color: #ccc; }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body { border-color: #8c002e; }
 
-.panel-body p { font-size: 120%; padding-right: 20px; }
+.panel-body p { font-size: 150%; padding-right: 20px; }
+@media (max-width: 1280px) { .panel-body p { clear: left; } }
 
 .session-sponsors { display: table; padding-left: 1%; width: 100%; }
 
 .session-sponsor { display: table-cell; width: 20%; padding-right: 1%; text-align: center; }
 .session-sponsor img { border-radius: 50%; }
+
+a.cta { text-align: center; margin: 3em auto 1em; color: #fff; font-weight: 900; display: block; display: block; background-size: cover; line-height: 150%; -webkit-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
+
+a.register { background: url(/wp-content/uploads/2018/10/blue-aqua.png) center center no-repeat; width: 303px; height: 199px; padding: 2em 0px; font-size: 200%; }
+
+a.sponsor { background: url(/wp-content/uploads/2018/10/red-pink.png) center center no-repeat; width: 539px; height: 387px; padding: 9em 1em 0px; font-size: 150%; max-width: 100%; }
+a.sponsor span { font-size: 150%; display: block; text-decoration: none; margin-bottom: 0.5em; }
+
+a.cta:hover { -webkit-transform: scale(1.5); transform: scale(1.5); }
+
+.section-foot { margin: 50px 0px; }
 
 /*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiIiwic291cmNlcyI6WyJzdHlsZS5jc3MiXSwiZmlsZSI6InN0eWxlLmNzcyJ9 */
